Fix the issue of poor readability of text in the math block input mode.

--- a/vercel.css
+++ b/vercel.css
@@ -538,6 +538,10 @@ thead::after {
   background: var(--v-gray-400);
 }
 
+#write .md-mathblock-panel .CodeMirror {
+  color: var(--v-gray-1000);
+}
+
 .cm-s-inner .CodeMirror-selected {
   border-radius: 2px;
   background-color: #404859 !important;
